iris-impl-distributed/src/test/resources/rif/NegativeEntailmentTest/Local_Predicate/Local_Predicate-nonconclusion.rif
<?xml version="1.0" encoding="UTF-8"?>

<!DOCTYPE Document [
  <!ENTITY rif  "http://www.w3.org/2007/rif#">
  <!ENTITY xs   "http://www.w3.org/2001/XMLSchema#">
  <!ENTITY rdf  "http://www.w3.org/1999/02/22-rdf-syntax-ns#">
]>

  <Atom  xmlns="&rif;">
    <op>
      <Const type="&rif;local">p</Const>
    </op>
      <args ordered="yes">
        <Const type="&rif;iri">http://example.org/#a</Const>
      </args>
  </Atom>
<!--XML document generated on Sun Nov 07 10:35:27 EST 2010-->
